--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost/develop?useSSL=false
+spring.datasource.username=root
+spring.datasource.password=pass
+
 server.port = 8081
