Tomcatにデプロイできるよう修正

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,5 +3,5 @@ spring.datasource.url=jdbc:mysql://localhost/develop?useSSL=false
 spring.datasource.username=root
 spring.datasource.password=pass
 
-server.port = 8081
-logging.level.org.springframework.jdbc=debug
+server.port = 8080
+server.servlet.context-path = /spring-web-board
